Modify cast create form

--- a/Movie-Magic/src/views/cast/create.hbs
+++ b/Movie-Magic/src/views/cast/create.hbs
@@ -4,7 +4,7 @@
             <h2>"You're gonna need a bigger boat." — "Jaws," 1975.</h2>
         </div>
 
-        <form action="#" method="" class="createCastForm">
+        <form method="POST" class="createCastForm">
             <h2>Add Cast</h2>
             <ul class="noBullet">
                 <li>
@@ -13,8 +13,8 @@
                         type="text"
                         class="inputFields"
                         id="name"
-                        name=""
-                        value=""
+                        name="name"
+                        
                     />
                 </li>
                 <li>
@@ -23,8 +23,8 @@
                         type="number"
                         class="inputFields"
                         id="age"
-                        name=""
-                        value=""
+                        name="age"
+                       
                     />
                 </li>
                 <li>
@@ -33,8 +33,8 @@
                         type="text"
                         class="inputFields"
                         id="born"
-                        name=""
-                        value=""
+                        name="born"
+                       
                     />
                 </li>
                 <li>
@@ -43,8 +43,9 @@
                         type="text"
                         class="inputFields"
                         id="name-in-movie"
-                        name=""
-                        value=""
+                        name="name-in-movie"
+                        disabled
+
                     />
                 </li>
                 <li>
@@ -53,8 +54,8 @@
                         type="text"
                         class="inputFields"
                         id="image"
-                        name=""
-                        value=""
+                        name="imageUrl"
+                        
                     />
                 </li>
                 <li id="center-btn">
