--- a/Movie-Magic/src/views/movie/details.hbs
+++ b/Movie-Magic/src/views/movie/details.hbs
@@ -26,6 +26,14 @@
 
                 <p class="card-category">Category: {{movie.category}}</p>
             </div>
+            <div class="details-btn">
+                <a href='' id="edit-button">Edit</a>
+                <a href='' id="delete-button">Delete</a>
+            </div>
+             <div class="attach-btn">
+                <a href='movies/{{movie.id}}/attach' id="attach-button">Attach</a>
+            </div>
+           
         </div>
         <div class="card_right">
             <img src="{{movie.imageUrl}}" alt="{{movie.title}}" />
