Add attach page with dynamic movie data

--- a/Movie-Magic/src/views/movie/details.hbs
+++ b/Movie-Magic/src/views/movie/details.hbs
@@ -31,7 +31,7 @@
                 <a href='' id="delete-button">Delete</a>
             </div>
              <div class="attach-btn">
-                <a href='movies/{{movie.id}}/attach' id="attach-button">Attach</a>
+                <a href='/movies/{{movie.id}}/attach' id="attach-button">Attach</a>
             </div>
            
         </div>
