--- a/Movie-Magic/src/public/css/create-edit.css
+++ b/Movie-Magic/src/public/css/create-edit.css
@@ -71,8 +71,12 @@ input[type=number]::-webkit-outer-spin-button {
 .details-btn {
   margin-left: 20%;
 }
+.attach-btn {
+  margin-left: 20%;
+  margin-top: 5%
+}
 
-#edit-button, #delete-button {
+#edit-button, #delete-button, #attach-button {
   border: 1px solid black;
   background: #b5838d;
   font-size: 18px;
@@ -85,7 +89,7 @@ input[type=number]::-webkit-outer-spin-button {
   font-weight: bold;
 }
 
-#edit-button:hover, #delete-button:hover {
+#edit-button:hover, #delete-button:hover,#attach-button:hover {
   background: rgba(20, 20, 20, 0.8);
   padding: 10px 80px;
 }
