--- a/Movie-Magic/src/views/layouts/main.hbs
+++ b/Movie-Magic/src/views/layouts/main.hbs
@@ -22,10 +22,10 @@
                 <!--Users-->
                 <li><a href="/movies/create">Create Movie</a></li>
                 <li><a href="/casts/create">Create Cast</a></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="/users/logout">Logout</a></li>
                 <!--Guest-->
-                <li><a href="#">Login</a></li>
-                <li><a href="#">Register</a></li>
+                <li><a href="/users/login">Login</a></li>
+                <li><a href="/users/register">Register</a></li>
             </ul>
 
         </nav>
