--- a/Movie-Magic/src/views/layouts/main.hbs
+++ b/Movie-Magic/src/views/layouts/main.hbs
@@ -20,12 +20,15 @@
                 <li><a href="/about">About</a></li>
                 <li><a href="/movies/search">Search</a></li>
                 <!--Users-->
+                {{#if user}}
                 <li><a href="/movies/create">Create Movie</a></li>
                 <li><a href="/casts/create">Create Cast</a></li>
                 <li><a href="/users/logout">Logout</a></li>
+                {{else}}
                 <!--Guest-->
                 <li><a href="/users/login">Login</a></li>
                 <li><a href="/users/register">Register</a></li>
+                {{/if}}
             </ul>
 
         </nav>
