--- a/Movie-Magic/src/views/movie/details.hbs
+++ b/Movie-Magic/src/views/movie/details.hbs
@@ -28,8 +28,8 @@
                 <p class="card-category">Category: {{movie.category}}</p>
             </div>
             <div class="details-btn">
-                <a href='' id="edit-button">Edit</a>
-                <a href='' id="delete-button">Delete</a>
+                <a href='/movies/{{movie.id}}/edit' id="edit-button">Edit</a>
+                <a href='/movies/{{movie.id}}/delete' id="delete-button">Delete</a>
             </div>
              <div class="attach-btn">
                 <a href='/movies/{{movie.id}}/attach' id="attach-button">Attach</a>
