--- a/Movie-Magic/src/views/layouts/main.hbs
+++ b/Movie-Magic/src/views/layouts/main.hbs
@@ -24,6 +24,7 @@
                 <li><a href="/movies/create">Create Movie</a></li>
                 <li><a href="/casts/create">Create Cast</a></li>
                 <li><a href="/users/logout">Logout</a></li>
+                <span  style="color: rgb(14, 10, 10);"> "{{user.email}}"</span>
                 {{else}}
                 <!--Guest-->
                 <li><a href="/users/login">Login</a></li>
