remove error handling Bug

--- a/Movie-Magic/src/views/home.hbs
+++ b/Movie-Magic/src/views/home.hbs
@@ -1,19 +1,16 @@
+{{setTitle "Home"}}
 
-            <section id="catalog">
-                <h1>All Movies</h1>
-                <div class="band">
-                    {{#each movies}}
-                    <!-- If there are posts for creature in the database display each of them -->
-                    {{>movie}}
-                    {{else}}
-                    <div class="no-posts">
-                        <p class="no-offer">There are no posts yet...</p>
-                    </div>
-                    {{/each}}
+<section id="catalog">
+    <h1>All Movies</h1>
+    <div class="band">
 
-                    
+        {{#each movies}}
+            {{>movie}}
+        {{else}}
+        <div class="no-posts">
+            <p class="no-offer">There are no posts yet...</p>
+        </div>
+        {{/each}}
 
-                    <!-- If there are still no posts in the database display: -->
-                     
-                </div>
-            </section>
+    </div>
+</section>
