--- a/Movie-Magic/src/public/css/create-edit.css
+++ b/Movie-Magic/src/public/css/create-edit.css
@@ -3,7 +3,7 @@
   background-color: #b5838d;
   margin: auto;
   width: 740px;
-  height: 1050px;
+  height: 950px;
   margin-top: 1rem;
   left: 35%;
   text-align: center;
@@ -71,12 +71,8 @@ input[type=number]::-webkit-outer-spin-button {
 .details-btn {
   margin-left: 20%;
 }
-.attach-btn {
-  margin-left: 20%;
-  margin-top: 5%
-}
 
-#edit-button, #delete-button, #attach-button {
+#edit-button, #delete-button {
   border: 1px solid black;
   background: #b5838d;
   font-size: 18px;
@@ -89,7 +85,7 @@ input[type=number]::-webkit-outer-spin-button {
   font-weight: bold;
 }
 
-#edit-button:hover, #delete-button:hover,#attach-button:hover {
+#edit-button:hover, #delete-button:hover {
   background: rgba(20, 20, 20, 0.8);
   padding: 10px 80px;
 }
