--- a/Movie-Magic/src/views/layouts/main.hbs
+++ b/Movie-Magic/src/views/layouts/main.hbs
@@ -1,49 +1,57 @@
+<!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8" />
-        <title>Movie Magic {{#if pageTitle}} | {{pageTitle}}{{/if}}</title>
-        <!-- Do not forget to change the path to the css file -->
-        <link href="/css/style.css" type="text/css" rel="stylesheet" />
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <title>Movie Magic{{#if pageTitle}} | {{pageTitle}}{{/if}}</title>
+    <!-- Do not forget to change the path to the css file -->
+    <link href="/css/style.css" type="text/css" rel="stylesheet">
+</head>
 
-    <body>
+<body>
 
-        <div id="box">
-            <div class="error-container">{{#if error}}<p
-                    >{{error}}</p>{{/if}}</div>
+    <div id="box">
 
-            <nav>
-                <img src="/img/logo.webp" alt="logo" />
-
-                <ul class="menu">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/about">About</a></li>
-                    <li><a href="/movies/search">Search</a></li>
-                    <!--Users-->
-                    {{#if user}}
-                        <li><a href="/movies/create">Create Movie</a></li>
-                        <li><a href="/casts/create">Create Cast</a></li>
-                        <li><a href="/users/logout">Logout</a></li>
-                        <span style="color: rgb(14, 10, 10);">
-                            "{{user.email}}"</span>
-                    {{else}}
-                        <!--Guest-->
-                        <li><a href="/users/login">Login</a></li>
-                        <li><a href="/users/register">Register</a></li>
-                    {{/if}}
-                </ul>
-
-            </nav>
-
-            <main>
-                {{{body}}}
-            </main>
-            <footer>
-                © JS Back-End Workshop
-            </footer>
+        {{#if error}}
+        <div class="error-container">
+            <p>{{error}}</p>
         </div>
+        {{/if}}
 
-    </body>
+        <nav>
+            <img src="https://cdn.pixabay.com/photo/2013/07/13/13/36/film-161204_1280.png" alt="logo">
+
+            <ul class="menu">
+                {{!-- All Users --}}
+                <li><a href="/">Home</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/movies/search">Search</a></li>
+
+                {{#if user}}
+                {{!-- Logged Users --}}
+                <li><a href="/movies/create">Create Movie</a></li>
+                <li><a href="/casts/create">Create Cast</a></li>
+                <li><a href="/users/logout">Logout</a></li>
+                <span style="color:orange;">{{user.email}}</span>
+                {{else}}
+                {{!-- Guest Users --}}
+                <li><a href="/users/login">Login</a></li>
+                <li><a href="/users/register">Register</a></li>
+                {{/if}}
+            </ul>
+        </nav>
+
+
+        <main>
+
+            {{{body}}}
+
+        </main>
+        <footer>
+            © JS Back-End Workshop
+        </footer>
+    </div>
+
+</body>
 
 </html>
