--- a/Movie-Magic/src/views/movie/attach.hbs
+++ b/Movie-Magic/src/views/movie/attach.hbs
@@ -3,8 +3,8 @@
         <h1>Attach New Cast</h1>
         <div class="attach-form">
             <h2>{{movie.title}}</h2>
-            <img class="movie" src="{{movie.imageUrl}}" />
-            <form  method="POST">
+            <img class="movie" src="{{movie.imageUrl}}">
+            <form method="POST">
                 <label for="cast">Cast</label>
                 <select id="cast" name="cast">
                     <option value="none" selected>--------</option>
