--- a/Movie-Magic/src/views/movie/create.hbs
+++ b/Movie-Magic/src/views/movie/create.hbs
@@ -1,12 +1,12 @@
-<section id="edit-page">
-    <div class="editSection">
-        <div class="info-edit">
-            <h2>"One ring to rule them all, one ring to find them, one ring to bring them all and in the darkness bind
-                them."</h2>
+<section id="create-page">
+    <div class="createSection">
+        <div class="info">
+            <h2>"Today, I consider myself the luckiest man on the face of the earth." -The Pride of the Yankees, 1942
+            </h2>
         </div>
 
-        <form method="POST" class="editForm">
-            <h2>Edit Post</h2>
+        <form action="/movies/create" method="POST" class="createForm">
+            <h2>Add Movie</h2>
             <ul class="noBullet">
                 <li>
                     <label for="title">Title:</label>
@@ -45,11 +45,13 @@
                     <label for="description">Description:</label>
                     <textarea id="description" class="inputFields" name="description">{{movie.description}}</textarea>
                 </li>
+
                 <li id="center-btn">
-                    <button id="edit-btn">Edit</button>
+                    <button id="create-btn">Add Movie</button>
                 </li>
             </ul>
         </form>
+
 
     </div>
 </section>
